5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3988/executions/1573_1559.log
== TEST (2019-03-13 13:54:34) 
-- CODE:
frase = ""Ada Lovelace foi a primeira programadora da historia.""
print(frase.upper)
-- ERROR:
File "XXXX", line 1
    frase = ""Ada Lovelace foi a primeira programadora da historia.""
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:56:24) 
-- CODE:
frase = ""Ada Lovelace foi a primeira programadora da historia.""
print(frase.upper()
-- ERROR:
File "XXXX", line 1
    frase = ""Ada Lovelace foi a primeira programadora da historia.""
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:57:21) 
-- CODE:
frase = ""Ada Lovelace foi a primeira programadora da historia.""
print("Ada Lovelace foi a primeira programadora da historia.".upper()
-- ERROR:
File "XXXX", line 1
    frase = ""Ada Lovelace foi a primeira programadora da historia.""
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:58:02) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:58:05) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.167656
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
